code seems to be complete

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         <div class="carousel-inner relative w-full overflow-hidden">
                             <div class="carousel-item active relative float-left w-full text-center">
 
-                                <blockquote class="h-12">
+                                <blockquote class="">
                                     <p class="text-xl italic mx-auto text-gray-700 max-w-4xl">
                                         Visita de lo más interesante de Segovia de la mano de Álvaro. Muy amena la
                                         visita y bien documentada...un básico para luego perderte por la ciudad. Muy
@@ -174,7 +174,7 @@
                                 <p class="text-gray-500">- Fran S</p>
                             </div>
                             <div class="carousel-item relative float-left w-full text-center">
-                                <blockquote class="h-12">
+                                <blockquote class="">
                                     <p class="text-xl italic mx-auto text-gray-700 max-w-4xl">
                                         Álvaro, nuestro guía, nos condujo por todo el casco histórico de forma
                                         excepcional, explicando datos muy curiosos y sorprendentes que de otra forma
@@ -189,7 +189,7 @@
                                 <p class="text-gray-500">- Carlota S</p>
                             </div>
                             <div class="carousel-item relative float-left w-full text-center">
-                                <blockquote class="h-12">
+                                <blockquote class="">
                                     <p class="text-xl italic mx-auto text-gray-700 max-w-4xl">
                                         Alvaro es un guia muy dedicado y amable, nos conto detalles e historias muy
                                         divertidas sobre la ciudad, recomiendo el tour!
@@ -201,6 +201,7 @@
                                 <p class="text-gray-500">- Ana G</p>
                             </div>
                         </div>
+
                     </a>
                     <button
                         class="carousel-control-prev absolute top-0 bottom-0 flex items-center justify-center p-0 text-center border-0 hover:outline-none hover:no-underline focus:outline-none focus:no-underline left-0"
@@ -226,7 +227,7 @@
         </div>
     </div>
     <div>
-        <iframe frameborder="0" class="mx-auto w-1/2 h-6/7 pb-10 rounded-xl" height="400"
+        <iframe frameborder="0" class="mx-auto sm:w-1/2 h-6/7 pb-10 rounded-xl" height="400"
             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJFXiJB90-QQ0RW0_EI1GoGyI"
             allowfullscreen="">
         </iframe>
