--- a/user-edit-profile.html
+++ b/user-edit-profile.html
@@ -67,6 +67,11 @@
                                 class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                         </div>
 
+                        <div>
+                            <label for="image" class="block text-sm font-medium text-gray-700"> Imagen de portada </label>
+                            <input id="profile-photo" type="file" name="image" id="image" class="my-2" accept="image/png, image/jpeg">
+                        </div>
+
                         <div class="flex justify-end">
                             <a href="./profile.html">
 
