--- a/booking-form.html
+++ b/booking-form.html
@@ -31,7 +31,6 @@
                 <div class="lg:row-end-1 lg:col-span-4">
                     <div class="aspect-w-4 aspect-h-3 rounded-lg bg-gray-100 overflow-hidden">
                         <img id="product-image"
-                            src="https://tailwindui.com/img/ecommerce-images/product-page-05-product-01.jpg"
                             alt="Sample of 30 icons with friendly and fun details in outline, filled, and brand color styles."
                             class="object-center object-cover">
                     </div>
@@ -105,6 +104,11 @@
                         <div class="col-span-6 sm:col-span-4">
                             <label for="surname" class="block text-sm font-medium text-gray-700">Apellido/s</label>
                             <input type="text" name="surname" id="surname" autocomplete="surname" required
+                                class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                        </div>
+                        <div class="col-span-6 sm:col-span-4">
+                            <label for="email" class="block text-sm font-medium text-gray-700">Email*</label>
+                            <input type="email" name="email" id="email" autocomplete="email" required
                                 class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                         </div>
 
