adjustments and purge unnnecesary content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Free Tour Segovia</title>
     <link rel="stylesheet" href="./css/tailwind-out.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="icon" href="./img/umbrella-transparent-148x121.png">
     <script src="./js/access-controll.js"></script>
     <script src="./js/scriptAPI.js"></script>
     <script src="./js/base-script.js"></script>
