--- a/user-edit-profile.html
+++ b/user-edit-profile.html
@@ -17,7 +17,7 @@
 
     <!-- NavBar -->
 
-    <nav id="navbarAdmin" class="bg-amber-500 shadow">
+    <nav id="navbar" class="bg-amber-500 shadow">
 
 
     </nav>
