tweaks antes de quitar los console log

--- a/admin.html
+++ b/admin.html
@@ -42,7 +42,7 @@
                                                 <img class="mx-auto h-20 w-20 rounded-full" src="./img/Ayuso.jpg" alt="">
                                             </div>
                                             <div class="mt-4 text-center sm:mt-0 sm:pt-1 sm:text-left">
-                                                <p class="text-xl font-bold text-gray-900 sm:text-2xl">Alvaro</p>
+                                                <p id="admin-name" class="text-xl font-bold text-gray-900 sm:text-2xl">Alvaro</p>
                                                 <p class="text-sm font-medium text-gray-600">Admin</p>
                                             </div>
                                         </div>
