--- a/product.html
+++ b/product.html
@@ -92,7 +92,7 @@
                     </div>
 
                     <p id="product-description" class="text-gray-500 mt-6"></p>
-                    <p class="text-gray-500 mt-6">Precio por persona: <span id="product-price"></span>€</p>
+                    <p class="text-gray-500 mt-6">Precio por persona: <span id="product-price"></span></p>
 
                     <div  class="mt-10 grid grid-cols-1 gap-x-6 gap-y-4 sm:grid-cols-2">  
                       <a id="booking-link" href="">
