add some comments

--- a/admin-product-new.html
+++ b/admin-product-new.html
@@ -63,7 +63,7 @@
 
                         <div>
                             <label for="image" class="block text-sm font-medium text-gray-700"> Imagen de portada </label>
-                            <input type="file" name="image" id="image" class="my-2" accept="image/png, image/jpeg" onchange="encodeImageFileAsURL(this)">
+                            <input type="file" name="image" id="image" class="my-2" accept="image/png, image/jpeg">
                         </div>
 
                         <div class="flex justify-end">
