--- a/admin.html
+++ b/admin.html
@@ -39,7 +39,7 @@
                                     <div class="sm:flex sm:items-center sm:justify-between">
                                         <div class="sm:flex sm:space-x-5">
                                             <div class="flex-shrink-0">
-                                                <img class="mx-auto h-20 w-20 rounded-full" src="./img/Ayuso.jpg" alt="">
+                                                <img id="profile-picture" class="mx-auto h-20 w-20 rounded-full" alt="">
                                             </div>
                                             <div class="mt-4 text-center sm:mt-0 sm:pt-1 sm:text-left">
                                                 <p id="admin-name" class="text-xl font-bold text-gray-900 sm:text-2xl">Alvaro</p>
